team-app/main/default/objects/Pipeline_Priority_Config__mdt/Pipeline_Priority_Config__mdt.object-meta.xml
<CustomObject>
    <description>This Week / Today scoring weights. Changing a row reorders the list with no deploy.</description>
    <label>Pipeline Priority Config</label>
    <pluralLabel>Pipeline Priority Configs</pluralLabel>
</CustomObject>