team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Big_Deal_Percent__c.field-meta.xml
<CustomField>
    <fullName>Big_Deal_Percent__c</fullName>
    <description>Model-routing big-deal floor as a percent.</description>
    <inlineHelpText>Default 5. Floor is percent of quota.</inlineHelpText>
    <label>Big Deal Percent</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>