team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Carryover_Boost__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Boost__c</fullName>
    <description>Added to last week's still-Open items at Monday lock.</description>
    <inlineHelpText>Default 10.</inlineHelpText>
    <label>Carryover Boost</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>