team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Focus_Cap_Today__c.field-meta.xml
<CustomField>
    <fullName>Focus_Cap_Today__c</fullName>
    <description>Hard cap for Today Focus.</description>
    <inlineHelpText>Default 5.</inlineHelpText>
    <label>Focus Cap Today</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>