team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Focus_Cap_Week__c.field-meta.xml
<CustomField>
    <fullName>Focus_Cap_Week__c</fullName>
    <description>Hard cap for This Week Focus.</description>
    <inlineHelpText>Default 10.</inlineHelpText>
    <label>Focus Cap This Week</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>