team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Quota_Basis__c.field-meta.xml
<CustomField>
    <fullName>Quota_Basis__c</fullName>
    <description>Used with Big Deal Percent for model routing.</description>
    <inlineHelpText>Fallback quarterly quota if ForecastConfigService has none.</inlineHelpText>
    <label>Quota Basis</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>