team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Weight_Decay__c.field-meta.xml
<CustomField>
    <fullName>Weight_Decay__c</fullName>
    <description>Decay term weight.</description>
    <inlineHelpText>wR default 0.15.</inlineHelpText>
    <label>Weight Decay</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>