team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Weight_Leverage__c.field-meta.xml
<CustomField>
    <fullName>Weight_Leverage__c</fullName>
    <description>Leverage term weight.</description>
    <inlineHelpText>wS default 0.25.</inlineHelpText>
    <label>Weight Leverage</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>