team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Weight_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Weight_Urgency__c</fullName>
    <description>Urgency term weight.</description>
    <inlineHelpText>wU default 0.30.</inlineHelpText>
    <label>Weight Urgency</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>