team-app/main/default/objects/Pipeline_Priority_Config__mdt/fields/Weight_Value__c.field-meta.xml
<CustomField>
    <fullName>Weight_Value__c</fullName>
    <description>Value term weight.</description>
    <inlineHelpText>wV default 0.30.</inlineHelpText>
    <label>Weight Value</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>